Code changes for pipeline

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	
 	<dependencies>
 	
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -39,6 +40,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>awscicdpipeline</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
